--- a/src/index.less
+++ b/src/index.less
@@ -2,23 +2,23 @@
 @tableCls: ~'@{prefixCls}-table-container';
 @antTableCls: ant-table;
 ::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
+  width: 6px;
+  height: 6px;
 }
 ::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.6);
   background-color: rgba(144, 147, 153, 0.3);
   border-radius: 2px;
-  box-shadow: inset 0 0 5px rgb(0 0 0 / 20%);
+  //box-shadow: inset 0 0 5px rgb(0 0 0 / 20%);
 }
 ::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.01);
+  background-color: #f6f8f8;
 }
 .primary-bold-color {
   color: @primary-color;
   font-weight: 500;
 }
 .@{tableCls} {
+
   .@{antTableCls}-wrapper {
     background-color: #f6f8f8;
     .@{antTableCls} {
@@ -27,10 +27,10 @@
       &-header {
         //margin-bottom: -8px !important;
         &::-webkit-scrollbar-track {
-          background-color:rgba(0,0,0,0);
+          background-color:#f6f8f8 !important;
         }
         &::-webkit-scrollbar-thumb {
-          background-color: transparent;
+          background-color: transparent !important;
         }
       }
       &-thead > tr > th,
@@ -43,7 +43,7 @@
       }
       &-tbody > tr {
         &.ant-table-row-selected td:not(.ant-table-selection-column) {
-          background-color:#f0faff;
+          background-color:#fffbe6;
         }
       }
       &-thead > tr > th {
@@ -212,11 +212,28 @@
         }
         &-bordered {
           &.ant-table-empty .ant-table-placeholder {
+            width: 100%;
+            height: 100%;
             border-left: 0;
             border-right: 0;
             border-bottom: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
           }
         }
+      }
+    }
+  }
+  &-tbody-row-selected {
+    background-color: @primary-color;
+    color: #fff;
+    transition: none;
+    &.@{antTableCls}-row-selected,
+    &.@{antTableCls}-row-hover {
+      td {
+        background-color: @primary-color !important;
+        color: #fff !important;
       }
     }
   }
